refactor: Optimize asset update listener with DB pre-filter
Refactors the `OffersObserver.updated(Asset asset)` method to improve
performance by pre-filtering ContractDefinitions at the database level.

Previously, all ContractDefinitions were fetched and then filtered in
memory. This change introduces a `QuerySpec` that filters
ContractDefinitions based on the updated asset's ID appearing as an
`operandRight` within their `assetsSelector` JSON field.
Specifically, the query uses `new Criterion("assetsSelector.operandRight", "=", newAsset.getId())`.

This leverages the underlying SQL database's JSON querying capabilities
(e.g., in Postgres) to significantly reduce the number of
ContractDefinitions loaded into memory.

After this initial database filter, the existing in-memory
`matchesAsset()` helper is still used to perform a final, detailed
validation of all criteria in the selector against the asset.
The observer processes only the first ContractDefinition that passes
both the database pre-filter and the full in-memory validation.

Unit tests for the asset update scenario in `OffersObserverTest.java`
have been updated to:
- Capture and verify the new `QuerySpec` sent to the store.
- Test scenarios where the database filter matches but the subsequent
  in-memory check fails.
- Test scenarios where the database filter finds no matches.